--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,28 @@ ul + p {
 
 
 
+   .card {
+      border: 2px solid #1b76f5;
+      padding: 20px;
+      margin: 10px;
+      width: 300px;
+      cursor: pointer;
+    }
+    .highlight {
+      background-color: #1b76f5;
+    }
+
+    #remove {
+	font-family: Arial, sans-serif;
+	font-weight: bold;
+	border: 2px solid #5b83b0;
+	background-color: #aed7f5;
+    color: #1b76f5;
+    text-align: center;
+    margin-top: 20px;
+	padding: 15px;
+    margin: 20px;
+}
 
 
 
@@ -115,12 +137,33 @@ ul + p {
 
 
 
+    .menu, .behavior {
+      border: 3px solid #8cbef5;
+      padding: 15px;
+      margin: 10px;
+      cursor: pointer;
+    }
 
-
-
-
-
-
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+	
+    li {
+      padding: 10px;
+      border: 1px solid #a5b7c7;
+      margin-top: 5px;
+      cursor: pointer;
+    }
+	
+    li.active {
+      background-color: #80a3c4;
+    }
+	
+    .menu button {
+      margin: 5px;
+      padding: 10px;
+    }
 
 
 
